# SeaBattle

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: Dockerfile  compose.load_test.yaml  compose.override_seabattle.yaml  compose.yaml
seabatlle/: game.py
seabatlle/game_errors/: board_errors.py  ship_errors.py
seabatlle/game_objects/: board.py  cell.py  ship.py
seabatlle/helpers/: constants.py
seabattle/: game.py
seabattle/game_errors/: api_errors.py  battlefield_errors.py  game_errors.py  ship_errors.py
seabattle/game_objects/: battlefield.py  bot.py  cell.py  player.py  ship.py
seabattle/helpers/: constants.py  convertors.py  logger.py
seabattle/listener/: api_error_handlers.py  apispec_generator.py  config.py  listener.py  validation_schemas.py  validators.py
tests/: conftest.py
tests/configs/: locust.conf
tests/helpers/: test_cases.py
tests/integration_tests/: api_test.py  game_test.py
tests/performance_tests/: seabattle.py  seabattle_test.py
tests/unit_tests/: battlefield_test.py  bot_test.py  cell_test.py  player_test.py  ship_test.py
tests/unittests/: cell_test.py  game_board_test.py  ship_test.py
