[tool.poetry]
name = "seabattle"
version = "0.1.0"
description = ""
authors = ["DenisKuliomin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
pytest = "^7.2.0"
locust = "^2.13.0"
coverage = "^7.0.3"
marshmallow = "^3.19.0"
inflection = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
